# matilda-ears

./: .env  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEMAP.md  Makefile  PROPOSAL_UNIVERSAL_I18N_ENHANCEMENT.md  README.md  SECURITY.md  TEST_CLI.md  TODO.md  apply_priority_config.py  architecture_analysis.md  command_verification.py  config.defaults.json  config.json  constraints-mac.txt  debug_comparison.py  debug_conversational.py  debug_pipeline.py  detection_order_results.json  docker-compose.yml  essential_features_report.md  goobits.yaml  macos_setup.sh  number_word_analysis.md  phase0_discovery_report.md  phase1_completion_report.md  phase2_completion_report.md  priority_test_results.json  pyproject.toml  regression_test_results.md  setup-config.yaml  setup.sh  stt.py  test.py  test_detection_order.py  test_detection_order_fixed.py  (+6 more)
docker/: Dockerfile  README.md  docker-compose.dev.audio.yml  docker-compose.yml  package-lock.json  server_launcher.py  start.sh  start_both.py  test_structure.py  token_manager.py  validate_setup.py  websocket_server.py
docker/dashboard/: admin.css  api.py  dashboard.js  index.html
docker/src/: __init__.py  api.py  encryption.py  server_launcher.py  simple_websocket_server.py  token_manager.py  validate_setup.py  websocket_server.py
docker/tests/: test_websocket_integration.py
docs/: PROPOSAL_MODULAR_ARCHITECTURE.md  api-reference.md  api_specification.md  feature-personalities.md
docs/architecture/: ears-boundaries.md
docs/archived/: PROPOSAL_REGIONAL_MEASUREMENT_SYSTEM.md  PROPOSAL_STREAMING.md  PROPOSAL_UNIVERSAL_I18N_ENHANCEMENT.md  UNIVERSAL_PATTERN_FRAMEWORK.md
examples/: README_voice_demo.md  __init__.py  smart_voice_demo.py  test_smart_voice_demo.py
goobits_matilda_ears/: __init__.py  cli.py  cli_hooks.py
proposals/: 014-streaming-coalesce.md  015-streaming-cpu-optimized.md  016-streaming-optimized-tldr.md
scripts/: benchmark_vad_perf.py  generate_ssl_certs.py  generate_token.py  macos_setup.sh  run_streaming_e2e.sh  setup.sh  setup_e2e_venv.sh  soak_transcription_server.py  test.py  test_history.py  test_install.py  train-wake-word.py
src/: config.json  main.py
src/audio/: __init__.py  capture.py  decoder.py  denoiser_pipeline.py  encoder.py  linux_recorder.py  opus_batch.py  streaming_processor.py  vad.py  vad_detector.py
src/core/: config.py  token_manager.py
src/document_parsing/: parser_factory_backup.py
src/goobits_stt/: __init__.py  app_hooks.py  cli.py
src/goobits_stt/audio/: capture.py  vad.py
src/goobits_stt/modes/: base_mode.py  conversation.py  hold_to_talk.py  listen_once.py  tap_to_talk.py  wake_word.py
src/goobits_stt/text_formatting/: capitalizer.py  formatter.py  nlp_provider.py  pattern_converter.py  utils.py
src/goobits_stt/transcription/: client.py  server.py  streaming.py
src/goobits_stt/utils/: ssl.py
src/logs/: ConversationMode.txt  ListenOnceMode.txt  WakeWordMode.txt  audio_capture.txt  audio_decoder.txt  test_module.txt  text_formatting.txt  transcription.txt
src/matilda_ears/: __init__.py  app_hooks.py  cli.py  config.json  main.py
src/matilda_ears/audio/: __init__.py  audio_streamer.py  capture.py  conversion.py  decoder.py  encoder.py  opus_batch.py  vad.py  vad_processor.py
src/matilda_ears/core/: __init__.py  auth.py  config.py  logging.py  mode_config.py  token_manager.py  vad.py  vad_state.py
src/matilda_ears/i18n/: __init__.py
src/matilda_ears/modes/: __init__.py  _imports.py  base_mode.py  conversation.py  file_transcribe.py  hold_to_talk.py  listen_once.py  tap_to_talk.py
src/matilda_ears/schemas/: __init__.py  requests.py  responses.py
src/matilda_ears/service/: __init__.py  health.py  transcription_server.py
src/matilda_ears/shared-setup/: setup.sh
src/matilda_ears/text_formatting/: __init__.py  capitalizer.py  common.py  constants.py  formatter.py  nlp_provider.py  pattern_converter.py  regex_patterns.py  utils.py
src/matilda_ears/transcription/: __init__.py  client.py  server.py
src/matilda_ears/utils/: model_downloader.py  ssl.py
src/matilda_ears/wake_word/: mode.py  (+4 more)
src/modes/: base_mode.py  conversation.py  file_transcribe.py  hold_to_talk.py  listen_once.py  tap_to_talk.py  wake_word.py
src/shared-setup/: setup.sh
src/stt/: __init__.py  app_hooks.py  cli.py  setup.sh  simple_server_utils.py
src/text_formatting/: __init__.py  capitalizer.py  common.py  constants.py  formatter.py  match_code.py  match_entities.py  match_numeric.py  match_web.py  nlp_provider.py  pattern_converter.py  regex_patterns.py  utils.py
src/transcription/: client.py  server.py  streaming.py
src/utils/: ssl.py
tests/: __init__.py  conftest.py  test_cli_smoke.py  test_server_integration.py
tests/__tools__/: pytest_diff_tracker.py  pytest_summary_plugin.py  verify_test_setup.py
tests/demos/: demo_document_speech.py
tests/fixtures/: test.html  test.json  test.txt
tests/integration/: __init__.py  conftest.py  test_backend_switching.py  test_cli_smoke.py  test_opus_streaming.py  test_server_integration.py  test_smart_voice_demo.py  test_streaming_e2e.py  test_streaming_local_agreement.py  test_streaming_replay_like.py  test_streaming_transcription.py  test_streaming_wake_word.py  test_stt_websocket.py
tests/internal/: __init__.py  test_simul_whisper_logging.py
tests/text_formatting/: __init__.py  test_advanced_edge_cases.py  test_basic_formatting.py  test_code_entities.py  test_contextual_numbers.py  test_edge_cases_from_comprehensive.py  test_entity_detector.py  test_entity_interactions.py  test_financial_entities.py  test_formatter.py  test_formatter_comprehensive.py  test_fun_entities.py  test_greedy_filename_edge_case.py  test_i18n.py  test_i18n_es_code.py  test_i18n_es_web.py  test_math_entities.py  test_numeric_entities.py  test_quotes_and_measurements.py  test_skip_methods.py  test_spanish_i18n.py  test_suffix_handling.py  test_time_and_duration.py  test_web_entities.py
tests/tools/: pattern_coverage_plugin.py
tests/unit/: __init__.py  test_audio_public_api.py  test_file_transcribe.py  test_token_manager.py
(+322 files in other folders)
